# order_book_manager

./: README.md  pyproject.toml
src/: main.py  scheduler.py
src/calculations/: base_calculation.py  spread_calculation.py
src/connectors/: base_connector.py  binance_connector.py
src/controllers/: base_controller.py
src/storage/: base_storage.py  local_lob_storage.py
